# Physical-AI-Humanoid-Robotics-Textbook

./: .gitignore  DEPLOYMENT.md  README.md
.claude/: settings.local.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/api/: dependencies.py  main.py
backend/api/routes/: __init__.py  chatkit.py  health.py  query.py
backend/config/: __init__.py  settings.py
backend/ingestion/: __init__.py  chunker.py  embedder.py  markdown_parser.py  vector_store.py
backend/models/: __init__.py  embedding.py  query.py
backend/scripts/: check_qdrant.py  ingest_content.py  simple_ingest.py
backend/services/: __init__.py  chatkit_tools.py  rag_service.py  response_generator.py  retrieval_service.py  selection_handler.py
frontend/: Book-Content-Details.md  docusaurus.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sidebars.ts
frontend/.github/workflows/: deploy.yml
frontend/docs/: intro.md
frontend/docs/module-01-ros2/: chapter-01-fundamentals.md  chapter-02-nodes-topics.md  chapter-03-urdf.md  index.md
frontend/docs/module-02-simulation/: index.md
frontend/docs/module-03-isaac/: index.md
frontend/docs/module-04-vla/: index.md
frontend/docs/module-05-sensors/: index.md
frontend/docs/module-06-locomotion/: index.md
frontend/docs/module-07-manipulation/: index.md
frontend/docs/module-08-perception/: index.md
frontend/docs/module-10-hri/: index.md
specs/: phase-7-chatkit-integration.md
specs/001-system-architecture/: plan.md  spec.md  tasks.md
(+24 files in other folders)
